# rotor

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE  README.md  RingModulator.jucer  Rotor.jucer  build.sh
.github/: issue_template.md  pull_request_template.md
.github/workflows/: cmake-mac.dev.yml  cmake-mac.yml  cmake-win.dev.yml  cmake-win.yml  cmake.dev.yml  cmake.yml
Builds/MacOSX/: Info-AU.plist  Info-VST.plist  Info-VST3.plist
Builds/MacOSX/Ring Modulator.xcodeproj/: project.pbxproj
Builds/MacOSX/Rotor.xcodeproj/: project.pbxproj
Builds/MacOSX/Rotor.xcodeproj/project.xcworkspace/xcuserdata/mrm5632.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Rotor.xcodeproj/xcshareddata/xcschemes/: Rotor - All.xcscheme
Builds/MacOSX/Rotor.xcodeproj/xcuserdata/mrm5632.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2019/: Ring Modulator.sln  Ring Modulator_SharedCode.vcxproj  Ring Modulator_SharedCode.vcxproj.filters  Ring Modulator_VST.vcxproj  Ring Modulator_VST3.vcxproj  Rotor.sln  Rotor_SharedCode.vcxproj  Rotor_SharedCode.vcxproj.filters  Rotor_VST3.vcxproj  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Rotor/: CMakeLists.txt  Rotor.jucer
Rotor/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Rotor/Source/: RotorEditor.cpp  RotorLookAndFeel.cpp  RotorProcessor.cpp
Source/: Analyzer.cpp  Analyzer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingModulatorLookAndFeel.cpp  RingModulatorLookAndFeel.h  RotorAnalyzer.cpp  RotorAnalyzer.h  RotorEditor.cpp  RotorEditor.h  RotorLookAndFeel.cpp  RotorLookAndFeel.h  RotorProcessor.cpp  RotorProcessor.h
VST3_SDK/: CMakeCache.txt  README.md
VST3_SDK/base/: README.md
VST3_SDK/cmake/: README.md
VST3_SDK/cmake/modules/: AddCommonOptions.cmake  AddVST3Options.cmake  GenerateSourceGroups.cmake  SMTG_VST3_SDK.cmake
VST3_SDK/pluginterfaces/: CMakeLists.txt  README.md
VST3_SDK/public.sdk/: README.md
VST3_SDK/public.sdk/source/main/: linuxmain.cpp
VST3_SDK/tools/: setup_linux_packages_for_vst3sdk.sh
VST3_SDK/vstgui4/: appveyor.yml
VST3_SDK/vstgui4/vstgui/doxygen/: page_create_your_own_ui_view.md
project/: Rotor.als
project/Ableton Project Info/: Project8_1.cfg
scripts/: build.sh  precompile.sh
src/: RotorAnalyzer.cpp  RotorAnalyzer.h  RotorData.h  RotorEditor.cpp  RotorEditor.h  RotorLookAndFeel.cpp  RotorLookAndFeel.h  RotorProcessor.cpp  RotorProcessor.h
